# stat-xplore-mcp

./: .env.example  .gitignore  README.md  guidance.md  pyproject.toml
.github/workflows/: deploy.yml
src/stat_xplore_mcp/: __init__.py  api.py  client.py  config.py  guidance.md  modal_app.py  models.py  server.py
